[tool.poetry]
name = "ipwebtools"
version = "2.0.1"
description = "IP Web Tools for manipulation and information in IP Addresses, CIDRs, Subnets and Ranges."
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/ipwebtools"
include = ["README.md", "LICENSE", "app.py", "examples"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"
starlette = "^0.37.0"
Jinja2 = "^3.0.1"
Starlette-WTF = "^0.4.3"
netaddr = "^1.2.1"
geoip2 = "^4.4.0"
httpx = "^0.27.0"
pycountry = "^24.6.1"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
pylint = "^3.0.0"
pydocstyle = "^6.1.1"
flake8 = "^7.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
