[project]
name = "ipwebtools"
version = "2.1.0"
description = "IP Web Tools for manipulation and information in IP Addresses, CIDRs, Subnets and Ranges."

authors = [{ name = "Rob Woodward", email = "rob@twfmail.uk" }]

license = "BSD-2-Clause"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "uvicorn[standard]<1.0,>=0.38",
    "gunicorn<26.0.0,>=23.0.0",
    "starlette<1.0.0,>=0.50.0",
    "Jinja2<4.0.0,>=3.0.1",
    "Starlette-WTF<1.0.0,>=0.4.3",
    "netaddr<2.0.0,>=1.2.1",
    "geoip2<6.0.0,>=5.1.0",
    "httpx<1.0.0,>=0.28.0",
    "pycountry<25.0.0,>=24.6.1",
    "humanize<5.0.0,>=4.9.0"
]

[project.urls]
repository = "https://github.com/robwdwd/ipwebtools"

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "flake8>=7.1.1",
    "black>=25.1.0",
    "pytest>=8.3.2",
    "pydocstyle>=6.3.0",
    "pylint>=3.2.7",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
